--- a/Team.html
+++ b/Team.html
@@ -6,12 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/team.css">
-    <link rel="stylesheet" href="css/mobileteam.css">
+    <!-- <link rel="stylesheet" href="css/mobileteam.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/team.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <title>Teams</title>
 </head>
 
 <body>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+
+        <label class="logo">CricHero</label>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="Team.html">Players</a></li>
+            <li><a href="#sellers">Sellers</a></li>
+            <li><a href="#registration">Registration</a></li>
+            <li><a href="#carticon">Carticon</a></li>
+            <li><a href="contact.html" class="active">Contact Us</a></li>
+        </ul>
+    </nav>
     <div class="pagenav">
         <button class="btn active" onclick="showteams()" id="btnteams">
             Teams
