--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+
+        <label class="logo">CricHero</label>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="Team.html">Players</a></li>
+            <li><a href="#sellers">Sellers</a></li>
+            <li><a href="#registration">Registration</a></li>
+            <li><a href="#carticon">Carticon</a></li>
+            <li><a href="contact.html" class="active">Contact Us</a></li>
+        </ul>
+    </nav>
     <div class="cont mw-1 m-auto">
         <div class="c-form">
             <h1>Send us a Message</h1>
